<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cline.android.ui.main.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.cline.android.ui.chat.ChatFragment"
        android:label="@string/nav_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.cline.android.ui.project.ProjectListFragment"
        android:label="@string/nav_projects"
        tools:layout="@layout/fragment_project_list" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.cline.android.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>